--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 <body>
 	<div class=navbar>
-		<a href=/ class=nav-link style="background: rgb(255, 255, 128); border-color: yellow;">{{ imp[1][0] }}</a>
+		<a href=/ class=nav-link style="background: rgb(255, 255, 128); border-color: yellow;">{{ imp[1][4] }}</a>
 		<a href=/recent_changes class=nav-link style="background: rgb(255, 128, 192); border-color: rgb(255, 62, 158);">최근 변경</a>
 		<a href=/recent_discuss class=nav-link style="background: rgb(89, 255, 172); border-color: rgb(0, 255, 128);">최근 토론</a>
 		
@@ -155,7 +155,7 @@
 		</colgroup>
 		
 		<tr>
-			<td id=commonTasks>
+			<td id=commonTasks style="vertical-align: top;">
 				<div id=commonTasksDiv>
 					<dl class="xp-taskgroup main-task">
 						<dt class=xp-taskgroup-title>
@@ -183,7 +183,7 @@
 				</div>
 			</td>
 			
-			<td style="background: rgb(255, 238, 238);">
+			<td style="background: rgb(255, 238, 238); vertical-align: top;">
 				<h1>{{ imp[0] }}{% if imp[3][0] != 0 %}{{ imp[3][0] }}{% endif %} - {{ imp[1][0] }}</h1>
 				{{ data|safe }}
 			</td>
